--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -1,21 +1,21 @@
-<script src="jquery-3.2.1.min.js"></script>
-
 <link rel="stylesheet" href="index.css">
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <body>
 
-    <div id="div_content">
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+<div id="div_content">
+    Book Title Here
 
-        The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
+    by John Adams
 
-        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+    Lorem ipsum dolor sit amet,consectetur adipiscing elit. In sit amet condimentum odio. Pellentesque ultricies, libero vitae commodo congue, tellus metus aliquet odio, vel aliquet neque nibh at nunc. Morbi euismod quam volutpat erat tempor, et pulvinar leo tempor. Pellentesque quis dui lacus. Curabitur aliquam gravida ultricies. Curabitur eget odio ut nisi volutpat euismod vel eget nulla. Nullam semper et felis vel aliquam. Suspendisse cursus magna ligula, in fringilla augue efficitur sit amet. Aliquam quis porta lectus. Mauris ut augue nisl. Phasellus a lacinia magna. Pellentesque lobortis ipsum a metus commodo aliquam.
 
-        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
-    </div>
+    Cras efficitur lacinia tellus, eu tincidunt nisl varius ut. In nisl tortor, commodo et scelerisque id, posuere id ex. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed eu ipsum odio. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla in nulla mi. Phasellus at tortor ullamcorper, laoreet purus ut, tincidunt nulla.
+
+    Suspendisse quis eros justo. Vivamus sit amet augue eros. Morbi ornare, justo et rutrum dignissim, dolor ligula vulputate magna, vel mattis lacus eros vel lacus. Donec enim ligula, pellentesque non rhoncus eu, porttitor nec eros. Sed arcu nunc, hendrerit sit amet malesuada nec, feugiat id nunc nam. molestie mauris in malesuada tincidunt. Suspendisse potenti. Duis vel neque maximus, pulvinar elit sed, lacinia turpis. Aenean facilisis, risus non consectetur ultrices, sem lectus blandit diam, dapibus dictum lorem diam sit amet enim.
+</div>
 
 </body>
 
 <script src="index.js"></script>
-
